# BullBear-NewsBot

./: .gitignore  README.md  config.py  main.py  pyproject.toml  render.yaml  requirements.txt
bot/handlers/: news.py  start.py  subscriptions.py
bot/keyboards/: inline.py
database/: database.py  models.py
middlewares/: database.py
services/: keepalive_service.py  news_filter.py  news_service.py  scheduler_service.py
utils/: logger.py
