[project]
name = "bullbearnewsbot"
version = "0.1.0"
description = ""
authors = [
    {name = "kibaidar1",email = "aidar1996@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "aiogram (>=3.24.0,<4.0.0)",
    "aiohttp (>=3.13.3,<4.0.0)",
    "environs (>=14.5.0,<15.0.0)",
    "apscheduler (>=3.11.2,<4.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
